--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Mor Website</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, velit nisi, praesentium maxime explicabo cum amet possimus dignissimos ipsa, non architecto tempore? Doloribus, sed? Officia cum expedita ut praesentium officiis.</p>
 </body>
 </html>
